# $Id$

2006-04-11
	* Removed sa_restorer crap (may fix some compile errors for some
	people)

2006-04-07
	* Added patch for adt746x fan/cpu speed for kernel >=2.6.12

2006-03-30
	* Added patch to support new port monitor REMOTESERVICE peekable.

2006-03-29
	* Scan port numbers as short.  Fixes debian bug# 359974.

2006-03-25
	* Added XMMS2 patch 1456203 from Lassi Selander
	* Added FreeBSD battery patch 1456008 from Petr Holub

2006-03-21
	* Fixed ${top(_mem)} related code on FreeBSD (with help of Petr
	Holub <hopet@users.sourceforge.net>)

2006-03-15
	* Removed bmp-infopipe dependency from 1.4.1 and 1.9999 ebuilds for Gentoo 
	(Gentoo bug# 125226).
	* Fixed subversion ebuild for conky1 (1.9999) so it pulls the new trunk
	path for conky1.

2006-03-12
	* FreeBSD cpu info patch
	* Conky 1.4.1 released

2006-03-07
	* Fixed issue where some WM's don't control conky own_window windows.
	* Added newly-updated vim file detection and syntax hilighting files to svn.
	* Fixed issue with graphs resetting colours (sf.net bug #1420473)

2006-03-06
	* Fixed battery problems when charged
	* MPD code handles broken pipe now, instead of just killing conky
	* Switch from CVS to SVN.  Thanks SourceForge.

2006-03-05
	* Added patch to make $cpu stuff work on alpha (thanks Thomas Cort)
	http://bugs.gentoo.org/show_bug.cgi?id=122637#c3
	* Stop using override_redirect true -- conky back under WM control
	when using 'own_window yes'.
	* Fixed texeci breakage when forking to background is on

2006-02-14
	* Drastically simplified own_window=yes window creation code.
	* on_bottom and wm_class_name deprecated (they do nothing)

2006-02-13
	* Fixed typo bug in portmon code that caused incorrect monitor data 
	to be displayed.

2006-02-12
	* Conky 1.4.0 released

2006-01-27
	* Cleaned up texeci code

2006-01-26
	* Added freedesktop.org extended window manager hints (EWMH)
	for window type NORMAL and state's STICKY/SKIP_PAGER/SKIP_TASKBAR.