@@ -336,6 +336,20 @@
 </varlistentry>
 
 <varlistentry>
+	<term><command><option>xftalpha</option></command></term>
+	<listitem>
+		Alpha of Xft font.  Must be a value at or between 1 and 0.
+	<para></para></listitem>
+</varlistentry>
+
+<varlistentry>
+	<term><command><option>xftfont</option></command></term>
+	<listitem>
+		Xft font to use.
+	<para></para></listitem>
+</varlistentry>
+
+<varlistentry>
 	<term><command><option>xmms_player</option></command></term>
 	<listitem>
 		Use specified player/plugin for the xmms status variables.  Valid items are: none, xmms, bmp, audacious and infopipe. (default is none).  Note that bmpx is currently handled separately.
