@@ -1,5 +1,8 @@
 # $Id$
 
+2006-04-15
+	* Added patch from Peter Tarjan to add support for IBM ACPI
+
 2006-04-11
 	* Removed sa_restorer crap (may fix some compile errors for some
 	people)
